--- a/css/registration.css
+++ b/css/registration.css
@@ -21,6 +21,7 @@ html {
     font-size: 10px;
 }
 
+/* general styling  */
 body,
 h1,
 h2,
@@ -35,22 +36,26 @@ ul {
   padding: 0;
   font-weight: normal;
 }
+
 body {
   background-color: #fff;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 12px;
 }
+
 a,
 a:hover {
   text-decoration: none;
   color:#3f51b5ff;
 }
+
 a:focus,
 a:active,
 a:visited {
   text-decoration: none;
 }
+
 a {
   outline: none !important;
   -webkit-transition: all 0.3s ease-in-out;
@@ -58,38 +63,49 @@ a {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
+
 a[href^="tel"] {
   color: inherit;
   text-decoration: none;
 }
+
 input:focus,
 textarea:focus,
 select:focus {
   outline: none;
 }
 
-/*.co-form { background-color: #fff;box-shadow: 2px 2px 10px grey; width: 50%;}*/
+/* the main form box  */
 .co-form {
   width: 40%;
   float: left;
   display: block;
   background-color: #fff;
-  box-shadow: 2px 2px 10px grey;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: absolute;
-  top: 8%;
+  top: 15%;
+  bottom: 15%;
+  left: 30%;
   right: 32%;
 }
+
+/* heading of the form  */
 .heading {
   padding: 40px;
   padding-left: 60px;
   padding-bottom: 5px;
 }
+
+/* heading size of the form  */
 .heading h3 {
-  font-size: 36px;
+  font-size: 3em;
 }
+
 .heading p {
-  font-size: 12px;
+  font-size: 1.2em;
 }
+
+/* the actual form  */
 .form1 {
   width: 100%;
   padding: 40px;
@@ -100,20 +116,28 @@ select:focus {
   font-size: 12px;
   padding-top: 20px;
 }
+
+/* inputs  */
 .n-m {
   position: relative;
   margin-bottom: 11px;
   width: calc((100% - 15px) / 2);
 }
+
+/* input labels  */
 .n-m span {
   margin-bottom: 15px;
   font-size: 14px;
   font-weight: 500;
 }
+
+/* inline elements  */
 .inline {
   display: inline;
   float: left;
 }
+
+/* input elements  */
 .input100 {
   width: 100%;
   height: 35px;
@@ -124,16 +148,17 @@ select:focus {
   font-size: 14px;
   padding: 8px 12px;
 }
+
 .input100:focus {
   background-color: #e2dfdf;
 }
+
 .input100:active {
   background-color: #e2dfdf;
 }
+
 .msg {
   display: inline;
-  float: left;
-  width: 100%;
   font-size: 12px;
   text-transform: uppercase;
 }
@@ -166,9 +191,8 @@ select:focus {
 .lastline a {
   cursor: pointer;
 }
+
 .login {
-  position: absolute;
-  bottom: 9%;
   color: #3f51b5ff;
   font-size: 13px;
   font-weight: 600;
@@ -179,6 +203,7 @@ select:focus {
   padding-right: 10px;
   font-size: 12px;
 }
+
 .help-aboutus {
   width: 35%;
   background-color: #fff;
@@ -202,4 +227,11 @@ select:focus {
 
 .registration-buttons:hover {
   color: white;
+}
+
+.end {
+  padding-top: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
