--- a/css/login.css
+++ b/css/login.css
@@ -72,10 +72,12 @@ select:focus {
   float: left;
   display: block;
   background-color: #fff;
-  box-shadow: 2px 2px 10px grey;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: absolute;
-  top: 8%;
+  top: 13%;
+  bottom: 13%;
   right: 32%;
+  left: 28%;
   
 }
 .heading {
@@ -173,8 +175,6 @@ select:focus {
 }
 
 .login {
-  position: absolute;
-  bottom: 9%;
   color: #3f51b5ff;
   font-size: 13px;
   font-weight: 600;
@@ -192,4 +192,11 @@ select:focus {
   position: absolute;
   bottom: -8%;
   right: -8%;
+}
+
+.end {
+  padding-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
