--- a/css/login.css
+++ b/css/login.css
@@ -37,7 +37,8 @@ ul {
 }
 body {
   background-color: #fff;
-  font-family: "Raleway", sans-serif;
+  /* font-family: "Raleway", sans-serif; */
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 12px;
 }
@@ -68,7 +69,7 @@ select:focus {
 
 /*.co-form { background-color: #fff;box-shadow: 2px 2px 10px grey; width: 50%;}*/
 .co-form {
-  width: 40%;
+  width: 37%;
   float: left;
   display: block;
   background-color: #fff;
@@ -76,8 +77,8 @@ select:focus {
   position: absolute;
   top: 13%;
   bottom: 13%;
-  right: 32%;
-  left: 28%;
+  right: 30%;
+  left: 30%;
   
 }
 .heading {
